update Welcome Page And some css

--- a/app/icons.css
+++ b/app/icons.css
@@ -1111,7 +1111,7 @@
     background-position: -1041px -523px
 }
 
-.symbol-FB {
+.symbol-META {
     width: 64px;
     height: 64px;
     background-position: -1115px -523px
@@ -2120,7 +2120,7 @@
     background-position: -1337px -1041px
 }
 
-.symbol-NGAS {
+.symbol-NATGAS {
     width: 64px;
     height: 64px;
     background-position: -1411px -1041px
