--- a/app/globals.css
+++ b/app/globals.css
@@ -1,8 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import "https://code.highcharts.com/css/stocktools/gui.css";
-@import "https://code.highcharts.com/css/annotations/popup.css";
+
 
 @layer base {
   :root {
@@ -42,19 +41,19 @@
   }
 
   .dark {
-    --background: 224 71.4% 4.1%;
-    --foreground: 210 20% 98%;
+    --background: 233,94%,7%;
+    --foreground: 240, 47%, 97%;
     --card: 224 71.4% 4.1%;
     --card-foreground: 210 20% 98%;
-    --popover: 224 71.4% 4.1%;
+    --popover: 233,94%,7%;
     --popover-foreground: 210 20% 98%;
     --primary: 210 20% 98%;
     --primary-foreground: 220.9 39.3% 11%;
-    --secondary: 215 27.9% 16.9%;
+    --secondary: 231, 97%, 14%;
     --secondary-foreground: 210 20% 98%;
     --muted: 215 27.9% 16.9%;
     --muted-foreground: 217.9 10.6% 64.9%;
-    --accent: 215 27.9% 16.9%;
+    --accent: 29, 72%, 51%;
     --accent-foreground: 210 20% 98%;
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 210 20% 98%;
@@ -63,7 +62,7 @@
     --ring: 216 12.2% 83.9%;
     --chart-1: 220 70% 50%;
     --chart-2: 160 60% 45%;
-    --chart-3: 30 80% 55%;
+    --chart-3: 28, 97%, 58%;
     --chart-4: 280 65% 60%;
     --chart-5: 340 75% 55%;
     --sidebar-background: 255 100%;
@@ -79,7 +78,7 @@
 @layer base {
   html {
     /*font-family: "Roboto", system-ui, sans-serif;*/
-    font-family: "Comic Sans MS",system-ui, sans-serif;
+    font-family: Roboto,RobotoDraft,Droid Sans,system-ui,-apple-system,BlinkMacSystemFont,sans-serif;
   }
 }
 
@@ -105,6 +104,20 @@
 }
 .highcharts-credits {
   display: none!important;
+}
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(10px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.message {
+  animation: fadeIn 0.3s ease-out;
 }
 /* custom scrollbar */
 ::-webkit-scrollbar {
